# learn_screencast

./: Cargo.toml
src/: egl_dma_buf.rs  egl_ext.rs  gl_ext.rs  lib.rs  main.rs  pipewire_stream.rs  ui.slint
